# RAG_chatbot

./: .gitignore  README.md  pyproject.toml
src/: chat.py  config.py  ingest.py  interface.py  retreiver.py  retriever.py
vectorstore/: index.faiss  index.pkl
